@@ -4,6 +4,7 @@ Changelog
 2019.4.2 (unreleased)
 ---------------------
 
+- Fix setting agenda item description. [deiferni]
 - Fix styling bug in tabbedview after showing bumblebee tooltip. [njohner]
 - Only show workspace notification tab when feature is activated. [njohner]
 - Do not manipulate the persisten journal list on @history get. [phgross]
